# droy-lang

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  BUILD_SYSTEM_README.md  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  DATABASE_README.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  SUPPORT.md  docker-compose.yml  droy.toml  index.html
.github/workflows/: ci.yml  codeql.yml  dependency-update.yml  release.yml
app/: tailwind.config.js
app/src/: index.css
app/src/droy-lang/: ast.ts  index.ts  interpreter.ts  lexer.ts  parser.ts
app/src/sections/: CodeExamples.tsx  Features.tsx  Footer.tsx  Hero.tsx  IDESection.tsx  Installation.tsx  LanguageSyntax.tsx  Playground.tsx
c-editor/: Makefile  README.md
c-editor/include/: droy_editor.h
c-editor/src/: droy_editor.c  editor_cursor.c  editor_display.c  editor_edit.c  editor_file.c  editor_input.c  editor_search.c  main.c
docs/: API.md  LANGUAGE_SPEC.md
droy-docs/: .gitattributes  CHANGELOG.md  EXAMPLES.md  LICENSE  README.md  SYNTAX.md  droy.tmLanguage.json  package.json
editor/: editor.css  editor.js  index.html
include/: droy.h
src/: App.css  App.tsx  ast.cpp  interpreter.c  lexer.c  main.c  parser.c
src/components/: CodeEditor.tsx  CodeEditorV2.tsx  CodeEditorV3.tsx  ParticleBackground.tsx  SyntaxHighlighter.tsx
src/lib/droy/: compiler-v2.ts  compiler-v3.ts  compiler.ts
tests/: test_interpreter.c  test_lexer.c  test_parser.c
